doc/static/css/common.css
/* make the page width fill the window */
.wy-nav-content {
   max-width: none;
}

/* Display version number in white */
.wy-side-nav-search > div.version {
 color: #fff;
}

/* Set background and border for navigation pane */
.wy-nav-side {
 background:#fafafa;
 border-right:#ddd solid 1px;
}

/* Light background when expanding as well */
.wy-menu-vertical li.current, .wy-menu-vertical li.toctree-l2.current>a, .wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a, .wy-menu-vertical li.toctree-l3.current>a, .wy-menu-vertical li.toctree-l3.current li.toctree-l4>a {
 background:#fafafa;
}

/* no change when hovering */
.wy-menu-vertical a:hover, .wy-menu-vertical li.current a:hover {
 background:#fafafa;
}

/* No scroll bar, white text for the doc switcher */
.rst-versions {
 overflow:hidden;
}
.rst-versions a {
 color: #fff;
}

/* Spacing in drop-down */
.rst-versions .rst-other-versions {
 padding: 0px;
}
.rst-other-version {
 padding: 12px;
}

/* Spacing of lists in the main document */
.document li > ol, .document li > ul {
    margin: 5px 0px !important;
}


.wy-side-nav-search input[type="text"] {
    border-width: 0;
}

/* Center-align images */
div.figure {
 text-align: center;
}

.caption {
 padding-top: 10px;
}

/* differentiate more between headings */

h5 {
 font-size: 105%;
}

h6 {
 font-size: 90%;
}


/* Background colors for the different sets */
.ncs {
 background-color: #00a9ce;
}
.zephyr {
 background-color: #a67dfb;
}
.mcuboot {
 background-color: #159957;
}
.nrfxlib {
 background-color: #ff9933;
}
.kconfig {
 background-color: #e82424
}


/* footer */
footer table {
 width: 100%;
}

#nordiclogo {
 width: 100px;
}


/*
 * dbk tweak for doxygen-generated API headings (for RTD theme)
 */
/* hide a heading doxygen adds before details and the details section */
.rst-content dl.group > dt, .rst-content dl.group > dd > p,
/* hide the #include line for every class (aka struct) and union */
.rst-content dl.class > dd > em, .rst-content dl.union > dd > em,
/* hide <ul> inside description blocks */
.rst-content dl.group > dd > ul,
/* hide "Public Members"/"Defines"/etc heading for structs */
.rst-content dl.class p.breathe-sectiondef-title {
   display:none !important;
}
.rst-content dl.group {
  margin: 0 0 12px 0px;
}
.rst-content dl.group>dd {
  margin-left: 0  !important;
}
.rst-content p.breathe-sectiondef-title {
  text-decoration: underline;  /* dbk for API sub-headings */
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 12px;
}
.rst-content div.breathe-sectiondef {
  padding-left: 0 !important;
}
p.highlight-link {
  font-size: 90%;
  margin: 0;
  margin-top: 5px;
}
p.highlight-link > a {
  color: white;
}
div.version .dropdown a {
 color: #fff;
}
div.version ul.dropdown {
 padding-top: 10px;
}
div#version_status {
 background-color: #f0f0a8;
 border: 1px dotted black;
 padding: 5px;
 margin-top: 10px;
}


/* numbered steps */

div.numbered-step>h2::before, div.numbered-step>h3::before, div.numbered-step>h4::before, div.numbered-step>h5::before {
  background: #cccccc;
  border-radius: 0.8em;
  -moz-border-radius: 0.8em;
  -webkit-border-radius: 0.8em;
  color: #ffffff;
  display: inline-block;
  font-weight: bold;
  line-height: 1.6em;
  margin-right: 5px;
  text-align: center;
  width: 1.6em;
}

h1 {counter-reset: step-count-h2;}
h2 {counter-reset: step-count-h3;}
h3 {counter-reset: step-count-h4;}
h4 {counter-reset: step-count-h5;}
h5 {counter-reset: step-count-h6;}

div.numbered-step>h2::before {
  counter-increment: step-count-h2;
  content: counter(step-count-h2);
}

div.numbered-step>h3::before {
  counter-increment: step-count-h3;
  content: counter(step-count-h3);
}

div.numbered-step>h4::before {
  counter-increment: step-count-h4;
  content: counter(step-count-h4);
}

div.numbered-step>h5::before {
  counter-increment: step-count-h5;
  content: counter(step-count-h5);
}

div.numbered-step>h6::before {
  counter-increment: step-count-h6;
  content: counter(step-count-h6);
}


/* add a section divider */

.rst-content h2 {
 border-top: 1px solid #ddd;
 padding-top: 20px;
 overflow-x: auto;
 line-height: 40px;
}


/* change the bullet item for links to subpages */

.toctree-wrapper ul li {
  list-style: none !important;
}

.toctree-wrapper ul li::before {
  content: "\27A4";
  padding-right: 10px;
  color: #444;
}


/* add styling for a local ToC */

.contents.local {
    float: right;
    border: 1px solid #ddd;
    background-color: #fafafa;
    padding: 10px 10px 0px 0px;
    margin: 0px 0px 25px 25px;
    max-width: 30%;
}

.contents.local a {
    font-size: 13px;
    line-height: 13px;
}

.contents.local ul p {
    margin-bottom: 0px;
}

.rst-content .admonition {
   overflow-x: auto;
   clear: left;
}

